[tool.poetry]
name = "rl-tutorials"
version = "0.1.0"
description = ""
authors = ["Michael Rudolph <michaelrudolph@posteo.net>"]
readme = "README.md"
packages = [{include = "rl_tutorials"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
